# PatchPilot

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.idea.yml  docker-compose.yml  pom.xml
.run/: PatchPilotApplication.run.xml
PatchPilot/: Dockerfile  pom.xml
docs/: comment-test.md  demo.md  pr-test-2.md
docs/agent/: adapter-smoke-checklist.md  harness-engineering.md  idea-local-run.md  smoke-test-checklist.md  temporary-url-webhook.md  vibe-coding.md
docs/demo-repositories/: README.md
docs/demo-repositories/python-poetry/: README.md  pyproject.toml
docs/plans/: 000-project-foundation.md  001-basic-version-implementation.md  001-github-webhook-mvp.md  002-task-execution-skeleton.md  003-workspace-clone-mvp.md  004-workspace-branch-mvp.md  005-file-tools-mvp.md  006-maven-test-runner-mvp.md  007-task-test-runner-integration.md  008-repository-inspection-tools.md  009-minimal-patch-workflow.md  010-local-commit-workflow.md  011-remote-branch-push.md  012-pull-request-creation.md  013-issue-comment-feedback.md  014-mysql-task-persistence.md  015-task-result-persistence.md  016-edit-issue-comment-lifecycle.md  017-task-execution-timeline.md  018-active-task-deduplication-queue.md  019-test-run-records.md  020-tool-call-audit-records.md  021-mysql-backed-task-queue.md  022-queue-recovery-and-retry.md  023-queue-observability-api.md  024-concurrent-queue-claim-safety.md  026-task-control-api.md  (+314 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  viteProxy.test.ts  vitest.config.ts
scripts/: adapter-smoke.sh
(+1427 files in other folders)
